init: codef 관련 config 생성